--- a/ServerCode.ipynb
+++ b/ServerCode.ipynb
@@ -2,23 +2,15 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 3,
    "metadata": {
     "collapsed": true,
     "ExecuteTime": {
-     "start_time": "2023-04-25T21:27:48.092459Z",
-     "end_time": "2023-04-25T21:27:48.099318Z"
+     "start_time": "2023-04-28T15:00:01.017817Z",
+     "end_time": "2023-04-28T15:00:03.609946Z"
     }
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "2.9.0\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import matplotlib\n",
     "from sklearn.ensemble import RandomForestRegressor\n",
@@ -27,7 +19,6 @@
     "import matplotlib.pyplot as plt\n",
     "from sklearn.exceptions import DataConversionWarning\n",
     "from tqdm import tqdm\n",
-    "from tensorflow.python.ops.numpy_ops import np_config\n",
     "import math\n",
     "from sklearn.model_selection import train_test_split\n",
     "from sklearn.metrics import mean_squared_error\n",
@@ -44,7 +35,6 @@
     "from matplotlib import pyplot\n",
     "import pickle\n",
     "\n",
-    "np_config.enable_numpy_behavior()\n",
     "random_state = 2023\n",
     "\n",
     "# Preset matplotlib figure sizes.\n",
@@ -53,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 4,
    "outputs": [],
    "source": [
     "class DatabaseLoader:\n",
@@ -546,32 +536,34 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "start_time": "2023-04-25T22:18:38.355782Z",
-     "end_time": "2023-04-25T22:18:38.382461Z"
+     "start_time": "2023-04-28T15:00:03.610091Z",
+     "end_time": "2023-04-28T15:00:03.638119Z"
     }
    }
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 5,
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Dropping Discount since 100.0% of entires were Null\n",
-      "Dropping CustomScore since 95.77425632471504% of entires were Null\n",
-      "Dropping VehicleType since 11.954406449819299% of entires were Null\n",
-      "Dropping RentMortgage since 99.88879621907145% of entires were Null\n",
-      "Dropping CashDown since 99.88879621907145% of entires were Null\n",
-      "Dropping MonthsAtHome since 99.88879621907145% of entires were Null\n",
-      "Dropping AvailableIncomePercent since 99.88879621907145% of entires were Null\n",
-      "Dropping HomeOwner since 99.88879621907145% of entires were Null\n",
-      "Dropping PaidAccounts since 99.94439810953573% of entires were Null\n",
-      "Dropping HasMortgage since 100.0% of entires were Null\n",
-      "Dropping InquiriesLast6Months since 99.94439810953573% of entires were Null\n",
-      "Dropping OpenAcctsInGoodStatus since 99.94439810953573% of entires were Null\n",
-      "Dropping OpenTotalInBadStatus since 99.94439810953573% of entires were Null\n"
+     "ename": "OperationalError",
+     "evalue": "(18456, b\"Login failed for user 'sa'.DB-Lib error message 20018, severity 14:\\nGeneral SQL Server error: Check messages from the SQL Server\\nDB-Lib error message 20002, severity 9:\\nAdaptive Server connection failed (localhost)\\nDB-Lib error message 20002, severity 9:\\nAdaptive Server connection failed (localhost)\\n\")",
+     "output_type": "error",
+     "traceback": [
+      "\u001B[0;31m---------------------------------------------------------------------------\u001B[0m",
+      "\u001B[0;31mMSSQLDatabaseException\u001B[0m                    Traceback (most recent call last)",
+      "File \u001B[0;32msrc/pymssql/_pymssql.pyx:647\u001B[0m, in \u001B[0;36mpymssql._pymssql.connect\u001B[0;34m()\u001B[0m\n",
+      "File \u001B[0;32msrc/pymssql/_mssql.pyx:2109\u001B[0m, in \u001B[0;36mpymssql._mssql.connect\u001B[0;34m()\u001B[0m\n",
+      "File \u001B[0;32msrc/pymssql/_mssql.pyx:701\u001B[0m, in \u001B[0;36mpymssql._mssql.MSSQLConnection.__init__\u001B[0;34m()\u001B[0m\n",
+      "File \u001B[0;32msrc/pymssql/_mssql.pyx:1818\u001B[0m, in \u001B[0;36mpymssql._mssql.maybe_raise_MSSQLDatabaseException\u001B[0;34m()\u001B[0m\n",
+      "File \u001B[0;32msrc/pymssql/_mssql.pyx:1835\u001B[0m, in \u001B[0;36mpymssql._mssql.raise_MSSQLDatabaseException\u001B[0;34m()\u001B[0m\n",
+      "\u001B[0;31mMSSQLDatabaseException\u001B[0m: (18456, b\"Login failed for user 'sa'.DB-Lib error message 20018, severity 14:\\nGeneral SQL Server error: Check messages from the SQL Server\\nDB-Lib error message 20002, severity 9:\\nAdaptive Server connection failed (localhost)\\nDB-Lib error message 20002, severity 9:\\nAdaptive Server connection failed (localhost)\\n\")",
+      "\nDuring handling of the above exception, another exception occurred:\n",
+      "\u001B[0;31mOperationalError\u001B[0m                          Traceback (most recent call last)",
+      "Cell \u001B[0;32mIn[5], line 5\u001B[0m\n\u001B[1;32m      2\u001B[0m     config \u001B[38;5;241m=\u001B[39m yaml\u001B[38;5;241m.\u001B[39mload(f, Loader\u001B[38;5;241m=\u001B[39myaml\u001B[38;5;241m.\u001B[39mFullLoader)\n\u001B[1;32m      3\u001B[0m server_info \u001B[38;5;241m=\u001B[39m config[\u001B[38;5;124m\"\u001B[39m\u001B[38;5;124mserver\u001B[39m\u001B[38;5;124m\"\u001B[39m]\n\u001B[0;32m----> 5\u001B[0m dbl \u001B[38;5;241m=\u001B[39m \u001B[43mDatabaseLoader\u001B[49m\u001B[43m(\u001B[49m\u001B[43mserver_info\u001B[49m\u001B[43m)\u001B[49m\n\u001B[1;32m      7\u001B[0m dbl\u001B[38;5;241m.\u001B[39mload_tables(config[\u001B[38;5;124m'\u001B[39m\u001B[38;5;124mtables\u001B[39m\u001B[38;5;124m'\u001B[39m], config[\u001B[38;5;124m'\u001B[39m\u001B[38;5;124mignore\u001B[39m\u001B[38;5;124m'\u001B[39m])\n\u001B[1;32m      8\u001B[0m dbl\u001B[38;5;241m.\u001B[39mprune_for_target(config[\u001B[38;5;124m'\u001B[39m\u001B[38;5;124mpredictions\u001B[39m\u001B[38;5;124m'\u001B[39m])\n",
+      "Cell \u001B[0;32mIn[4], line 3\u001B[0m, in \u001B[0;36mDatabaseLoader.__init__\u001B[0;34m(self, _server_info)\u001B[0m\n\u001B[1;32m      2\u001B[0m \u001B[38;5;28;01mdef\u001B[39;00m \u001B[38;5;21m__init__\u001B[39m(\u001B[38;5;28mself\u001B[39m, _server_info):\n\u001B[0;32m----> 3\u001B[0m     _conn \u001B[38;5;241m=\u001B[39m \u001B[43mpss\u001B[49m\u001B[38;5;241;43m.\u001B[39;49m\u001B[43mconnect\u001B[49m\u001B[43m(\u001B[49m\u001B[43mserver\u001B[49m\u001B[38;5;241;43m=\u001B[39;49m\u001B[43m_server_info\u001B[49m\u001B[43m[\u001B[49m\u001B[38;5;124;43m'\u001B[39;49m\u001B[38;5;124;43mname\u001B[39;49m\u001B[38;5;124;43m'\u001B[39;49m\u001B[43m]\u001B[49m\u001B[43m,\u001B[49m\u001B[43m \u001B[49m\u001B[43muser\u001B[49m\u001B[38;5;241;43m=\u001B[39;49m\u001B[43m_server_info\u001B[49m\u001B[43m[\u001B[49m\u001B[38;5;124;43m'\u001B[39;49m\u001B[38;5;124;43muser\u001B[39;49m\u001B[38;5;124;43m'\u001B[39;49m\u001B[43m]\u001B[49m\u001B[43m,\u001B[49m\n\u001B[1;32m      4\u001B[0m \u001B[43m                            \u001B[49m\u001B[43mpassword\u001B[49m\u001B[38;5;241;43m=\u001B[39;49m\u001B[43m_server_info\u001B[49m\u001B[43m[\u001B[49m\u001B[38;5;124;43m'\u001B[39;49m\u001B[38;5;124;43mpassword\u001B[39;49m\u001B[38;5;124;43m'\u001B[39;49m\u001B[43m]\u001B[49m\u001B[43m,\u001B[49m\u001B[43m \u001B[49m\u001B[43mdatabase\u001B[49m\u001B[38;5;241;43m=\u001B[39;49m\u001B[43m_server_info\u001B[49m\u001B[43m[\u001B[49m\u001B[38;5;124;43m'\u001B[39;49m\u001B[38;5;124;43mdatabase\u001B[39;49m\u001B[38;5;124;43m'\u001B[39;49m\u001B[43m]\u001B[49m\u001B[43m)\u001B[49m\n\u001B[1;32m      6\u001B[0m     \u001B[38;5;28mself\u001B[39m\u001B[38;5;241m.\u001B[39m_cursor \u001B[38;5;241m=\u001B[39m _conn\u001B[38;5;241m.\u001B[39mcursor()\n\u001B[1;32m      7\u001B[0m     \u001B[38;5;28mself\u001B[39m\u001B[38;5;241m.\u001B[39m_empty \u001B[38;5;241m=\u001B[39m \u001B[38;5;28;01mTrue\u001B[39;00m\n",
+      "File \u001B[0;32msrc/pymssql/_pymssql.pyx:653\u001B[0m, in \u001B[0;36mpymssql._pymssql.connect\u001B[0;34m()\u001B[0m\n",
+      "\u001B[0;31mOperationalError\u001B[0m: (18456, b\"Login failed for user 'sa'.DB-Lib error message 20018, severity 14:\\nGeneral SQL Server error: Check messages from the SQL Server\\nDB-Lib error message 20002, severity 9:\\nAdaptive Server connection failed (localhost)\\nDB-Lib error message 20002, severity 9:\\nAdaptive Server connection failed (localhost)\\n\")"
      ]
     }
    ],
